--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }} - {{ site.title }}</title>
+    <title>
+    {% if page.url == "/" %}
+        {{ site.title }}
+    {% else %}
+        {{ page.title }} - {{ site.title }}
+    {% endif %}
+</title>
+    <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
+    <meta name="author" content="{{ site.author }}">
+    <meta name="robots" content="index, follow">
+    <!-- Facebook Open Graph -->
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
+    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
