--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-    {% if page.url == "/" %}
-        {{ site.title }}
-    {% else %}
-        {{ page.title }} - {{ site.title }}
-    {% endif %}
-</title>
+    <title>{% if page.url == "/" %}{{ site.title }}{% else %}{{ page.title }} - {{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
     <meta name="author" content="{{ site.author }}">
