--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,13 @@
     <meta property="og:url" content="{{ site.url }}">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ page.title }}">
+    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
+    <!-- Canonical -->
+    <link rel="canonical" href="{{ site.url }}">
 </head>
 <body>
     {% include header.html %}
