--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <meta name="description" content="{{ site.description }}">
+    <meta name="description" content="{{ page.description }}">
     <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
-    <meta name="author" content="{{ site.author }}">
+    <meta name="author" content="{{ page.author }}">
     <meta name="robots" content="index, follow">
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:description" content="{{ page.description }}">
     <meta property="og:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="{{ page.url }}">
     <meta property="og:type" content="website">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:description" content="{{ page.description }}">
     <meta name="twitter:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
     <!-- Canonical -->
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
@@ -30,7 +30,7 @@
       "@type": "WebPage",
       "name": "{{ page.title }}",
       "description": "{{ page.description }}",
-      "url": "{{ page.description }}"
+      "url": "{{ page.url }}"
     }
     </script>
 </head>
