--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,14 @@
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
+    <meta property="og:image" content="{{ page.thumbnail }}">
     <meta property="og:url" content="{{ page.url }}">
     <meta property="og:type" content="website">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{ page.title }}">
     <meta name="twitter:description" content="{{ page.description }}">
-    <meta name="twitter:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
+    <meta name="twitter:image" content="{{ page.thumbnail }}">
     <!-- Canonical -->
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     <link rel="canonical" href="{{ site.url }}">
