--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
     <meta name="description" content="{{ page.description }}">
-    <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
+    <meta name="keywords" content="{{ page.keywords }}">
     <meta name="author" content="{{ page.author }}">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="{{ page.robots}}">
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:description" content="{{ page.description }}">
