--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
-    <p>© {{ site.time | date: "%Y" }} - {{ site.author }}</p>
+    <p>Made with ❤️ by ASIBUKA Group </p>
+    <p>All right reserved &copy; 2022-{{ site.time | date: "%Y" }} - {{ site.author }}</p>
 </footer>
