--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,1 @@
-<footer>
-    <p>Made with ❤️ by ASIBUKA Group </p>
-    <p>All right reserved &copy; 2022-{{ site.time | date: "%Y" }} - {{ site.author }}</p>
-</footer>
+<footer><p>Made with ❤️ by <a href='{{ site.url }}' title='{{ site.title }}'>{{ site.author }}</a></p><p>2022-{{ site.time | date: "%Y" }} &copy; All right reserved.</p></footer>
