--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,14 @@
-<header>
-    <nav>
-        <ul>
-            {% for link in site.nav_links %}
-                <li><a href="{{ link[1] }}">{{ link[0] }}</a></li>
-            {% endfor %}
-        </ul>
-    </nav>
+<header id="site-header" itemscope itemtype="https://schema.org/WPHeader">
+    <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+        <a href="{{ site.url }}" itemprop="url">
+            <img src="{{ site.url }}/assets/img/ASIBUKA-Blue.png" alt="{{ site.title }} logo" itemprop="logo">
+
+        {% if page.url == "/" or page.url == "/index.html" %}
+            <h1 itemprop="name">{{ site.title }}</h1>
+        {% else %}
+            <span itemprop="name" class="site-title">{{ site.title }}</span>
+        {% endif %}
+            
+        </a>
+    </div>
 </header>
