--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,22 +1,2 @@
-<nav id="sidebar" class="sidebar">
-    <button id="close-sidebar" class="close-btn">&times;</button>
-    <ul class="menu">
-        <li><a href="#">DMCA</a></li>
-        <li><a href="#">Hubungi Kami</a></li>
-        <li><a href="#">Laman Diskusi</a></li>
-        <li><a href="#">Keijakan Privasi</a></li>
-        <li><a href="#">Tentang Kami</a></li>
-        <li><a href="#">Testimoni</a></li>
-        <li class="dropdown">
-            <a href="#">Proyek Kami &#x25BE;</a>
-            <ul class="submenu">
-                <li><a href="#">ASIBUKA Logistics</a></li>
-                <li><a href="#">ASIBUKA Food</a></li>
-                <li><a href="#">ASIBUKA Media</a></li>
-                <li><a href="#">ASIBUKA Talent</a></li>
-                <li><a href="#">ASIBUKA Store</a></li>
-            </ul>
-        </li>
-    </ul>
-</nav>
-    <div id="overlay" class="overlay"></div>
+<nav id="sidebar" class="sidebar"><button id="close-sidebar" class="close-btn">&times;</button><ul class="menu">{% for link in site.nav_links %}<li><a title='{{ link[0] }}' href="{{ link[1] }}">{{ link[0] }}</a></li>{% endfor %}</ul></nav>
+<div id="overlay" class="overlay"></div>
