--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,8 @@
     <meta content='origin-when-crossorigin' name='referrer'>
     <meta content='general' name='rating'>
     <meta content='global' name='distribution'>
-    <meta content='id' name='language'>
-    <meta content='id' name='geo.country'>
-    <meta content='Indonesian' name='geo.placename'>
+    <meta content='{{ page.lang }}' name='language'>
+    <meta content='{{ page.lang }}' name='geo.country'>
     <meta content='global' name='target'>
     <meta content='global' name='distribution'>
     <title>{{ page.title }}</title>
