--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,14 @@
-<header class="floating-navbar" itemscope itemtype="https://schema.org/WPHeader"><div class="brand-name" itemscope itemtype="https://schema.org/Organization"><a href='{{ site.url }}' title='{{ site.title }}' itemprop="url"><span itemprop="name">{{ site.title }}</span></a></div><div class="nav-icons"><span id="dark-mode-toggle">🌙</span><button id="hamburger-menu" class="hamburger">&#9776;</button></div></header>
+<header class="floating-navbar" itemscope itemtype="https://schema.org/WPHeader">
+    <!-- Left: Hamburger menu -->
+    <button id="hamburger-menu" class="hamburger">&#9776;</button>
+
+    <!-- Center: Brand Name -->
+    <div class="brand-name" itemscope itemtype="https://schema.org/Organization">
+        <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url">
+            <span itemprop="name">ASIBUKA Group</span>
+        </a>
+    </div>
+
+    <!-- Right: Dark Mode Toggle -->
+    <span id="dark-mode-toggle">🌙</span>
+</header>
