--- a/_includes/style.css
+++ b/_includes/style.css
@@ -39,6 +39,7 @@ body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
     color: #fff;
     text-decoration: none;
     white-space: nowrap;
+    text-transform:uppercase;
 }
 
 /* Ensure link styling remains */
