--- a/_includes/style.css
+++ b/_includes/style.css
@@ -94,6 +94,11 @@ footer {
         max-width:800px;
     margin: 0 auto
 }
+footer a{
+    text-decoration:none;
+    font-weight:bold;
+    color:#fff
+}
 
 main {
     max-width: 800px;
