--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,4 +1,4 @@
-body{background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;margin:0 auto}
+body{background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;margin:0 auto;max-width:800px}
 /* Dark Mode */
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 /* Floating Navbar - Full Width */
