--- a/_includes/style.css
+++ b/_includes/style.css
@@ -3,7 +3,7 @@ body{background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;text-align:c
 /* Dark Mode */
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 /* Floating Header Navbar */
-.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;background:#004AAD;padding:15px 20px;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
+.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:900px;background:#004AAD;padding:15px 20px;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
 #hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer}
 .brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:#fff;text-decoration:none;white-space:nowrap;text-transform:uppercase}
 .brand-name a{color:#fff;text-decoration:none}
@@ -28,16 +28,6 @@ body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 .dropdown:hover .submenu{display:block}
 .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;z-index:1000;opacity:0;transition:opacity .3s ease-in-out}
 .overlay.show{visibility:visible;opacity:1}
-footer {
-    background: #333;
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
-        max-width:800px;
-    margin: 0 auto
-}
-footer a{
-    text-decoration:none;
-    font-weight:bold;
-    color:#fff
-}
+/* Footer */
+footer{background:#333;color:#fff;text-align:center;padding:1rem 0;max-width:900px;margin:0 auto;transition:.3s ease-in-out}
+footer a{text-decoration:none;font-weight:700;color:#fff}
