--- a/_includes/style.css
+++ b/_includes/style.css
@@ -3,16 +3,14 @@ body{background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;text-align:c
 /* Dark Mode */
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 /* Floating Header Navbar */
-.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:900px;background:#004AAD;padding:15px 20px;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
-#hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer}
+.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
+#hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer;margin-left:1rem}
 .brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:#fff;text-decoration:none;white-space:nowrap;text-transform:uppercase}
 .brand-name a{color:#fff;text-decoration:none}
-#dark-mode-toggle{font-size:24px;color:#fff;cursor:pointer;transition:.3s}
+#dark-mode-toggle{font-size:24px;color:#fff;cursor:pointer;transition:.3s;margin-right:1rem}
 #dark-mode-toggle:hover{color:#ff0}
 @media (max-width: 768px) {
-.floating-navbar{padding:12px 15px}
-#hamburger-menu{margin-left:1rem}
-#dark-mode-toggle{margin-right:1rem}
+.floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
 .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#fff;transition:transform .3s ease-in-out}
