--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,7 @@
     <meta name="twitter:description" content="{{ page.description }}">
     <meta name="twitter:image" content="{{ page.thumbnail }}">
     <!-- Canonical -->
-    <style>
-        {% include style.css %}
-    </style>
+    <style>{% include style.css %}</style>
     <link rel="canonical" hreflang='{{ page.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Structured Data -->
