--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,12 @@
 <body>
 {% include header.html %}
 {% include nav.html %}
-{% include top-info.html %}
+<section class="top-info">
+<img src="{{ page.thumbnail }}" alt="{{ page.title }}" title="{{ page.title }}">
+<h1>{{ page.title }}</h1>
+<p>{{ page.description }}</p>
+{% if page.url == "/" %}{% include social-links.html %}{% endif %}
+</section>
 <main>
 {{ content }}
 </main>
