--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang }}">
+<html lang="{{ page.lang | default: site.defaults.lang }}">
 <head>
     <meta charset='UTF-8'>
     <meta content='IE=EDGE' http-equiv='X-UA-Compatible'>
@@ -7,40 +7,40 @@
     <meta content='origin-when-crossorigin' name='referrer'>
     <meta content='general' name='rating'>
     <meta content='global' name='distribution'>
-    <meta content='{{ page.lang }}' name='language'>
-    <meta content='{{ page.lang }}' name='geo.country'>
+    <meta content='{{ page.lang | default: site.defaults.lang }}' name='language'>
+    <meta content='{{ page.lang | default: site.defaults.lang }}' name='geo.country'>
     <meta content='global' name='target'>
     <meta content='global' name='distribution'>
-    <title>{{ page.title }}</title>
-    <meta content='{{ page.title }}' name='title'>
-    <meta name="description" content="{{ page.description }}">
-    <meta name="keywords" content="{{ page.keywords }}">
-    <meta name="author" content="{{ page.author }}">
-    <meta name="robots" content="{{ page.robots}}">
+    <title>{{ page.title | default: site.defaults.title }}</title>
+    <meta content='{{ page.title | default: site.defaults.title }}' name='title'>
+    <meta name="description" content="{{ page.description | default: site.defaults.description }}">
+    <meta name="keywords" content="{{ page.keywords | default: site.defaults.keywords }}">
+    <meta name="author" content="{{ page.author | default: site.defaults.author }}">
+    <meta name="robots" content="{{ page.robots | default: site.defaults.author }}">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="{{ page.thumbnail }}">
+    <meta property="og:title" content="{{ page.title | default: site.defaults.title }}">
+    <meta property="og:description" content="{{ page.description | default: site.defaults.description }}">
+    <meta property="og:image" content="{{ page.thumbnail | default: site.defaults.thumbnail }}">
     <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <meta property="og:type" content="website">
-    <meta content='{{ page.title }}' property='og:headline'>
-    <meta content='{{ site.title }}' property='og:site_name'>
+    <meta content='{{ page.title | default: site.defaults.title }}' property='og:headline'>
+    <meta content='{{ site.title | default: site.defaults.title }}' property='og:site_name'>
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ page.description }}">
-    <meta name="twitter:image" content="{{ page.thumbnail }}">
+    <meta name="twitter:title" content="{{ page.title | default: site.defaults.title }}">
+    <meta name="twitter:description" content="{{ page.description | default: site.defaults.description }}">
+    <meta name="twitter:image" content="{{ page.thumbnail | default: site.defaults.thumbnail }}">
     <!-- Canonical -->
     <style>{% include style.css %}</style>
-    <link rel="canonical" hreflang='{{ page.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
+    <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "{{ page.title }}",
-      "description": "{{ page.description }}",
+      "name": "{{ page.title | default: site.defaults.title }}",
+      "description": "{{ page.description | default: site.defaults.description }}",
       "url": "{{ site.url }}{{ page.url | replace:'index.html','' }}"
     }
     </script>
@@ -49,9 +49,9 @@
 {% include header.html %}
 {% include nav.html %}
 <section class="top-info">
-<img src="{{ page.thumbnail }}" alt="{{ page.title }}" title="{{ page.title }}">
-<h1>{{ page.title }}</h1>
-<p>{{ page.description }}</p>
+<img src="{{ page.thumbnail | default: site.defaults.thumbnail }}" alt="{{ page.title | default: site.defaults.title }}" title="{{ page.title | default: site.defaults.title }}">
+<h1>{{ page.title | default: site.defaults.title }}</h1>
+<p>{{ page.description | default: site.defaults.description }}</p>
 {% if page.url == "/" %}{% include social-links.html %}{% endif %}
 </section>
 <main>
