--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,6 @@
 {{ content }}
 </main>
 {% include footer.html %}
-<script src="{{ site.baseurl }}/assets/js/main.js"></script>
+<script>{% include main.js %}</script>
 </body>
 </html>
