--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,5 +1,5 @@
 /* Light Mode (Default) */
-body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;text-align:center;max-width:900px;margin:0 auto}
+body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;max-width:900px;margin:0 auto}
 /* Dark Mode */
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 /* Floating Header Navbar */
@@ -27,7 +27,7 @@ body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;z-index:1000;opacity:0;transition:opacity .3s ease-in-out}
 .overlay.show{visibility:visible;opacity:1}
 /* Top Info */
-.top-info{margin-top:100px;text-align:center;position:relative;padding-bottom:20px;margin-bottom:30px}
+.top-info{text-align:center;margin-top:100px;text-align:center;position:relative;padding-bottom:20px;margin-bottom:30px}
 .top-info img{width:120px;height:120px;border-radius:50%;object-fit:cover;border:3px solid #004AAD;transition:.3s ease-in-out}
 .top-info h1{font-size:24px;margin:10px 0}
 .top-info p{font-size:16px;max-width:400px;margin:auto;color:#555}
