--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <meta name="description" content="{{ page.description | default: site.defaults.description }}">
     <meta name="keywords" content="{{ page.keywords | default: site.defaults.keywords }}">
     <meta name="author" content="{{ page.author | default: site.defaults.author }}">
-    <meta name="robots" content="{{ page.robots | default: site.defaults.author }}">
+    <meta name="robots" content="{{ page.robots | default: site.defaults.robots }}">
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="{{ page.title | default: site.defaults.title }}">
     <meta property="og:description" content="{{ page.description | default: site.defaults.description }}">
