--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 {% include header.html %}
 {% include nav.html %}
 {% include top-info.html %}
-<div><ins class="adsbygoogle" data-ad-client="ca-pub-4951061355072034" data-ad-slot="4462286938" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+<div><ins style='display:block' class="adsbygoogle" data-ad-client="ca-pub-4951061355072034" data-ad-slot="4462286938" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 <main>
 {{ content }}
 </main>
