--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,5 @@
 layout: default
 ---
 <article>
-    <h1>{{ page.title }}</h1>
-    <p><em>Published on {{ page.date | date: "%B %d, %Y" }}</em></p>
-    <div>{{ content }}</div>
+{{ content }}
 </article>
