--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,3 +1,5 @@
+/* CSS Reset */
+*{transition:all .1s;line-height:1.5;scroll-behavior:smooth}html{line-height:1.5;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
 /* Light Mode (Default) */
 body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;max-width:900px;margin:0 auto}
 /* Dark Mode */
