--- a/_includes/style.css
+++ b/_includes/style.css
@@ -6,7 +6,7 @@ body{font-family:Arial,sans-serif;background-color:#f4f4f4;color:#333;max-width:
 body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
 /* A (Hyperlink) */
 a{background-color:transparent;-webkit-text-decoration-skip:objects;text-decoration:none;font-weight:600;color:#012345}
-body.darkmode a{color:#ffffff}
+body.dark-mode a{color:#ffffff}
 a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:#012345}
 /* Floating Header Navbar */
 .floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
