--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,7 @@
 <main>
 {{ content }}
 </main>
-{% assign query_params = page.url | split: '?' %}
-{% if query_params.size > 1 and query_params[1] contains 'iframev=1' %}
+{% if page.url contains '?iframev=1' %}
   <!-- Elemen yang ingin ditampilkan jika parameter ada -->
   <div>Ini adalah elemen yang ditampilkan karena parameter iframev=1 ada di URL.</div>
 {% endif %}
