--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 <main>
 {{ content }}
 </main>
-{% if page.url contains '?iframev=1' %}
+{% if site.url contains '?iframev=1' %}
   <!-- Elemen yang ingin ditampilkan jika parameter ada -->
   <div>Ini adalah elemen yang ditampilkan karena parameter iframev=1 ada di URL.</div>
 {% endif %}
