edit floating section

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -11,7 +11,7 @@ a:hover,a:focus,body.darkmode a:hover,body.darkmode a:focus{color:#012345}
 /* Article */
 section,main,aside,footer,nav{padding:auto .5rem}
 /* Floating Header Navbar */
-.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
+.floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;width:100%;max-width:900px;background:#004AAD;padding:1rem 0;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px;text-transform:capitalize}
 #hamburger-menu{font-size:24px;color:#fff;background:none;border:none;cursor:pointer;margin-left:1rem}
 .brand-name{position:absolute;left:50%;transform:translateX(-50%);font-size:18px;font-weight:700;color:#fff;text-decoration:none;white-space:nowrap;text-transform:uppercase}
 .brand-name a{color:#fff;text-decoration:none}
