edit content default for auto toc

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,5 +30,5 @@ layout: default
   </div>
 {% endif %}
 
-{{ content | replace: '<h2', '<h2 id="' | replace: '</h2>', '</h2>' | replace: '<h3', '<h3 id="' | replace: '</h3>', '</h3>' }}
+{{ content }}
 </article>
