add atom.xml and rss.xml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,10 @@
     <link href='/assets/icons/favicon-96x96.png' rel='icon' sizes='96x96' type='image/png'>
     <link href='/assets/icons/favicon-16x16.png' rel='icon' sizes='16x16' type='image/png'>
     <link href='/manifest.json' rel='manifest'>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="{{ site.url }}/sitemap.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ site.url }}/feed.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="{{ site.url }}/rss.xml">
+    <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ site.url }}/atom.xml">
     <meta content='#004aad' name='msapplication-TileColor'>
     <meta content='/assets/icons/ms-icon-144x144.png' name='msapplication-TileImage'>
     <meta content='#004aad' name='theme-color'>
