--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,9 @@
-<header class="floating-navbar" itemscope itemtype="https://schema.org/WPHeader"><button id="hamburger-menu" class="hamburger">&#9776;</button><div class="brand-name" itemscope itemtype="https://schema.org/Organization"><a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url"><span itemprop="name">ASIBUKA Group</span></a></div><span id="dark-mode-toggle">🌙</span></header>
+<header class="floating-navbar" itemscope itemtype="https://schema.org/WPHeader">
+    <label for="sidebar-toggle" class="hamburger-menu">&#9776;</label>
+    <div class="brand-name" itemscope itemtype="https://schema.org/Organization">
+        <a href="https://asibuka.com" title="ASIBUKA Group" itemprop="url">
+            <span itemprop="name">ASIBUKA Group</span>
+        </a>
+    </div>
+    <span id="dark-mode-toggle">🌙</span>
+</header>
