--- a/_includes/style.css
+++ b/_includes/style.css
@@ -21,7 +21,7 @@ article{margin:auto .5rem}
 .floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
-.sidebar{position:fixed;top:0;left:-300px;width:300px;z-index:4;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
+.sidebar{position:fixed;top:0;left:-300px;width:300px;z-index:4;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d;overflow-y:auto}
 .sidebar .close{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
 .sidebar ul{list-style:none;padding:0}
 .sidebar li{padding:15px}
