add aria-label for nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
-<input type='checkbox' hidden aria-hidden='true' aria-label='Sidebar Menu' id='sidebar-toggle'>
-<nav itemscope itemtype='https://schema.org/SiteNavigationElement' id='sidebar' class='sidebar' aria-hidden='true'>
+<input type='checkbox' hidden aria-hidden='true' id='sidebar-toggle'>
+<nav itemscope itemtype='https://schema.org/SiteNavigationElement' id='sidebar' class='sidebar' aria-label='Sidebar Menu' aria-hidden='true'>
     <label for='sidebar-toggle' class='close'>&times;</label>
     <h2>Navigation Links</h2>
     <ul class='menu'>
