add meta verification

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,8 @@
     <meta content='#004aad' name='msapplication-TileColor'>
     <meta content='/assets/icons/ms-icon-144x144.png' name='msapplication-TileImage'>
     <meta content='#004aad' name='theme-color'>
+    <!-- Verification -->
+    <meta name='dmca-site-verification' content='OWJ0Vk5lWTVjNzRLMWxFcis4NythQT090'>
     <!-- Canonical -->
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
