add rel amphtml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,7 @@
     <meta name='dmca-site-verification' content='OWJ0Vk5lWTVjNzRLMWxFcis4NythQT090'>
     <!-- Canonical -->
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
+    <link rel="amphtml" href="{{ page.url | absolute_url }}/amp/">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>{% include style.css %}</style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4951061355072034" crossorigin="anonymous"></script>
