Add Gemfile for Jekyll AMP

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {% if page.amp %}amp{% endif %} lang="{{ page.lang | default: site.defaults.lang }}">
+<html {% if page.amp %}{% else %}amp{% endif %}lang="{{ page.lang | default: site.defaults.lang }}">
 <head>
     <meta charset='UTF-8'>
     <meta content='IE=EDGE' http-equiv='X-UA-Compatible'>
@@ -57,9 +57,9 @@
     <!-- Canonical -->
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     {% if page.amp %}
-<link rel="canonical" href="{{ page.url | replace: '/amp/', '/' | absolute_url }}">
+    <link rel="amphtml" href="{{ page.url | absolute_url | append: '/amp/' }}">
 {% else %}
-<link rel="amphtml" href="{{ page.url | absolute_url | append: '/amp/' }}">
+<link rel="canonical" href="{{ page.url | replace: '/amp/', '/' | absolute_url }}">
 {% endif %}
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
