--- a/_includes/style.css
+++ b/_includes/style.css
@@ -25,7 +25,11 @@ article{margin:auto .5rem}
 .floating-navbar{padding:12px 0}
 }
 /* Sidebar Menu */
-.sidebar{position:fixed;top:0;left:-290px;width:250PX;z-index:4;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding:60px 20px 20px;box-shadow:2px 0 10px #0000004d;overflow-y:auto;text-align:center}
+.page-wrapper{height:100%;overflow:auto}
+#sidebar-toggle:checked ~ .page-wrapper{overflow:hidden}
+.sidebar-container{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:4}
+#sidebar-toggle:checked ~ .page-wrapper .sidebar-container{pointer-events:auto}
+.sidebar{position:fixed;top:0;left:-290px;width:250px;z-index:5;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding:60px 20px 20px;box-shadow:2px 0 10px #0000004d;overflow-y:auto;text-align:center;pointer-events:auto}
 .sidebar h2{margin:0 0 20px;font-size:1.5rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;padding:10px;border-bottom:2px solid #ffffff80}
 .sidebar .close{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
 .sidebar ul{list-style:none;padding:0}
@@ -33,11 +37,11 @@ article{margin:auto .5rem}
 .sidebar a{color:#fff;text-decoration:none;display:block;padding:10px;border-radius:5px;transition:background .3s}
 .sidebar a:hover{background:#fff3}
 .overlay{position:fixed;z-index:3;top:0;left:0;width:100%;height:100%;background:#00000080;opacity:0;visibility:hidden}
-#sidebar-toggle:checked ~ .sidebar{left:0}
-#sidebar-toggle:checked ~ .overlay{opacity:1;visibility:visible}
+#sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
+#sidebar-toggle:checked ~ .page-wrapper .overlay{opacity:1;visibility:visible}
 @media (max-width: 400px) {
 .sidebar{width:75%;left:-120%}
-#sidebar-toggle:checked ~ .sidebar{left:0}
+#sidebar-toggle:checked ~ .page-wrapper .sidebar{left:0}
 .sidebar h2{font-size:1.3rem}
 }
 /* Top Info */
