implement lazyload on adsense ads

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,6 @@
     <link rel="canonical" hreflang='{{ page.lang | default: site.defaults.lang }}' href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>{% include style.css %}</style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4951061355072034" crossorigin="anonymous"></script>
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
@@ -74,7 +73,7 @@
 {% include header.html %}
 {% include nav.html %}
 {% include top-info.html %}
-<div><ins style='display:block' class="adsbygoogle" data-ad-client="ca-pub-4951061355072034" data-ad-slot="4462286938" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+<div itemscope itemtype='https://schema.org/WPAdblock' class='ads'><ins style='display:block' class="adsbygoogle" data-ad-client="ca-pub-4951061355072034" data-ad-slot="4462286938" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 <main>
 {{ content }}
 </main>
