--- a/_includes/top-info.html
+++ b/_includes/top-info.html
@@ -1,7 +1,7 @@
-<section class="top-info">
-{% if page.url == "/" %}<img src="{{ page.thumbnail | default: site.defaults.thumbnail }}" alt="{{ page.title | default: site.defaults.title }}" title="{{ page.title | default: site.defaults.title }}">{% endif %}
+<section class='top-info'>
+{% if page.url == '/' %}<img src='{{ page.thumbnail | default: site.defaults.thumbnail }}' alt='{{ page.title | default: site.defaults.title }}' title='{{ page.title | default: site.defaults.title }}'>{% endif %}
 <h1>{{ page.title | default: site.defaults.title }}</h1>
 <p>{{ page.description | default: site.defaults.description }}</p>
-{% if page.url == "/" %}{% include social-links.html %}{% endif %}
-{% if page.collection == 'posts' %}<p class="post-label"><svg viewBox="0 0 24 24"><path d="M19 7.001c0 3.865-3.134 7-7 7s-7-3.135-7-7c0-3.867 3.134-7.001 7-7.001s7 3.134 7 7.001zm-1.598 7.18c-1.506 1.137-3.374 1.82-5.402 1.82-2.03 0-3.899-.685-5.407-1.822-4.072 1.793-6.593 7.376-6.593 9.821h24c0-2.423-2.6-8.006-6.598-9.819z"></path></svg> {{ page.author | default: site.defaults.author }} - <svg viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 14h-7v-8h2v6h5v2z"></path></svg> {{ page.date | date: "%B %d, %Y" }}</p>{% endif %}
+{% if page.url == '/' %}{% include social-links.html %}{% endif %}
+{% if page.collection == 'posts' %}<p class='post-label'><svg viewBox='0 0 24 24'><path d='M19 7.001c0 3.865-3.134 7-7 7s-7-3.135-7-7c0-3.867 3.134-7.001 7-7.001s7 3.134 7 7.001zm-1.598 7.18c-1.506 1.137-3.374 1.82-5.402 1.82-2.03 0-3.899-.685-5.407-1.822-4.072 1.793-6.593 7.376-6.593 9.821h24c0-2.423-2.6-8.006-6.598-9.819z'></path></svg> {{ page.author | default: site.defaults.author }}</p>{% endif %}
 </section>
